# RemoteControl

./: README.md  build.gradle.kts  config.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/debusun/remotecontrol/: MainActivity.kt
app/src/main/java/com/debusun/remotecontrol/model/: AirRequest.kt  AirResult.kt
app/src/main/java/com/debusun/remotecontrol/module/air/: AirAction.kt  AirManager.kt  AirManagerImpl.kt
app/src/main/res/layout/: activity_main.xml
base/: build.gradle.kts
base/src/main/java/com/debusun/base/model/: BaseRequest.kt  BaseResult.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
remoteChannel/: build.gradle.kts
remoteChannel/src/main/cpp/: CMakeLists.txt
remoteChannel/src/main/cpp/src/: CMakeLists.txt  RemoteControl.cxx  RemoteControl.h  RemoteControl.idl  RemoteControlCdrAux.hpp  RemoteControlCdrAux.ipp  RemoteControlClient.cpp  RemoteControlPubSubTypes.cxx  RemoteControlPubSubTypes.h  RemoteControlServer.cpp
remoteChannel/src/main/java/com/fastdds/remotechannel/: RemoteControlLib.kt  RequestCallBackManager.kt
